codedocs-core/tests/snapshots/doc_ir__bloque_de_codigo_con_lenguaje.snap
---
source: codedocs-core/tests/doc_ir.rs
expression: "parse_document(\"```rust\\nfn main() {}\\n```\\n\")"
---
[
    CodeBlock {
        lang: Some(
            "rust",
        ),
        code: "fn main() {}\n",
    },
]
