codedocs-core/tests/snapshots/doc_ir__bloque_de_codigo_sin_lenguaje.snap
---
source: codedocs-core/tests/doc_ir.rs
expression: "parse_document(\"```\\nlet x = 1;\\n```\\n\")"
---
[
    CodeBlock {
        lang: None,
        code: "let x = 1;\n",
    },
]
