codedocs-core/tests/snapshots/doc_ir__cita_con_dos_bloques.snap
---
source: codedocs-core/tests/doc_ir.rs
expression: "parse_document(\"> primero\\n>\\n> segundo\\n\")"
---
[
    Quote {
        blocks: [
            Paragraph {
                spans: [
                    Span {
                        text: "primero",
                        marks: None,
                    },
                ],
            },
            Paragraph {
                spans: [
                    Span {
                        text: "segundo",
                        marks: None,
                    },
                ],
            },
        ],
    },
]
