codedocs-core/tests/snapshots/doc_ir__cursiva_abierta_antes_que_negrita.snap
---
source: codedocs-core/tests/doc_ir.rs
expression: "parse_document(\"*cursiva con **negrita***\\n\")"
---
[
    Paragraph {
        spans: [
            Span {
                text: "cursiva con ",
                marks: Italic,
            },
            Span {
                text: "negrita",
                marks: Italic,
            },
        ],
    },
]
