codedocs-core/tests/snapshots/doc_ir__html_crudo_se_descarta.snap
---
source: codedocs-core/tests/doc_ir.rs
expression: "parse_document(\"<script>alert(1)</script>\\n\\n<div>texto util</div>\\n\")"
---
[
    Opaque {
        text: "",
    },
    Opaque {
        text: "texto util",
    },
]
