codedocs-core/tests/snapshots/doc_ir__lista_con_vinetas.snap
---
source: codedocs-core/tests/doc_ir.rs
expression: "parse_document(\"- uno\\n- dos\\n- tres\\n\")"
---
[
    List {
        ordered: false,
        items: [
            [
                Paragraph {
                    spans: [
                        Span {
                            text: "uno",
                            marks: None,
                        },
                    ],
                },
                Paragraph {
                    spans: [
                        Span {
                            text: "dos",
                            marks: None,
                        },
                    ],
                },
                Paragraph {
                    spans: [
                        Span {
                            text: "tres",
                            marks: None,
                        },
                    ],
                },
            ],
        ],
    },
]
